# learngit

./: .cproject  .gitignore  .project  CMakeLists.txt  KF32A151MQV.ld  KF32A152MQV.ld  README.md  hello.py  kf_it.c  main.c  misra.json  misra2012-rule.txt  readme.txt  system_init.c  system_init.h  test.txt  text.txt
Drivers/: AEB_CMS_alg.c  AEB_CMS_alg.h  EC200U.c  EC200U.h  SSS_alg.c  SSS_alg.h  aeb_cms_sss_para_config.h  alg_log_to_can.c  alg_log_to_can.h  at_parse_alg_para.c  at_parse_alg_para.h  bluetooth.c  bluetooth.h  canhl.c  canhl.h  config.c  config.h  displayer.c  displayer.h  flash.c  flash.h  gpio.c  gpio.h  log.c  log.h  md5.c  md5.h  proportional_valve.c  proportional_valve.h  screen.c  screen.h  spi.c  spi.h  stereo_camera.c  stereo_camera.h  tim.c  tim.h  update.c  update.h  usart.c  (+9 more)
FreeRTOS/: port.c
FreeRTOS/include/: FreeRTOSConfig.h
Tasks/: Report.c  Report.h  Urader.c  _4g_bt.c  _4g_bt.h  _4g_data_upload.c  _4g_data_upload.h  _4g_upgrade.c  _4g_upgrade.h  aebs_task.c  aebs_task.h  alarm.c  alarm.h  can_task.c  can_task.h  common.h  data_center_services.c  data_center_services.h  data_uploading.c  data_uploading.h  get_parameter.c  get_parameter.h  screen_task.c  screen_task.h  set_parameter.c  set_parameter.h  spi_flash.c  spi_flash.h  task_manager.c  task_manager.h  uart_task.c  uart_task.h  upgrade_common.h  usart_upgrade.c  usart_upgrade.h
Vehicles/: vehicle_can.c  vehicle_can.h  vehicle_can_dongfeng.c  vehicle_can_dongfeng.h  vehicle_can_futian.c  vehicle_can_futian.h  vehicle_can_jinlv.c  vehicle_can_jinlv.h  vehicle_can_kinglong.c  vehicle_can_kinglong.h  vehicle_can_liuqi.c  vehicle_can_liuqi.h  vehicle_can_sunlong.c  vehicle_can_sunlong.h  vehicle_can_wanxiang.c  vehicle_can_wanxiang.h  vehicle_can_zhongche.c  vehicle_can_zhongche.h  vehicle_can_zhongtong.c  vehicle_can_zhongtong.h  vehicle_can_zhongxing.c  vehicle_can_zhongxing.h  vehicle_can_zkhy.c  vehicle_can_zkhy.h
docs/: DFD.dot  tuning-appnotes.md
inc/: KF32A_BASIC.h  KF32A_Config.h
src/: kf32a_basic_can.c  kf32a_basic_gptim.c
